RESOLVED FIXED26543
WINCE should use 'GetLastError' in RegisterFile.h
https://bugs.webkit.org/show_bug.cgi?id=26543
Summary WINCE should use 'GetLastError' in RegisterFile.h
Adam Treat
Reported 2009-06-19 09:38:39 PDT
WINCE does not use errno, but rather 'GetLastError.'
Attachments
Use GetLastError on WINCE (2.87 KB, patch)
2009-06-19 09:52 PDT, Adam Treat
staikos: review+
Adam Treat
Comment 1 2009-06-19 09:52:21 PDT
Created attachment 31548 [details] Use GetLastError on WINCE
George Staikos
Comment 2 2009-06-19 09:54:45 PDT
Comment on attachment 31548 [details] Use GetLastError on WINCE I think this patch is fine, but I think a future change we should make is to create a WebKitErrno define which will map to the appropriate variable or function call
Adam Treat
Comment 3 2009-06-19 10:02:22 PDT
Landed with r44857.
Note You need to log in before you can comment on or make changes to this bug.