2009-06-19  Yong Li  <yong.li@torchmobile.com>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=26543
        Windows CE uses 'GetLastError' instead of 'errno.'

        * interpreter/RegisterFile.h:
        (JSC::RegisterFile::RegisterFile):
        (JSC::RegisterFile::grow):

Canonical link: https://commits.webkit.org/36670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44857 268f45cc-cd09-0410-ab3c-d52691b4dbfc